@@ -1,3 +1,7 @@
+  24 Jun 2015; Alon Bar-Lev <alonbl@redhat.com>
+  ovirt-jboss-eap-bin-6.4.0.ebuild:
+  Add nofetch()
+
   03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +metadata.xml,
   ovirt-jboss-as-bin-7.1.1.ebuild:
   fixups
